# dspy_researcher

./: .envtemplate  .gitignore  pyproject.toml  requirements.in
dspy_researcher/: __init__.py  logging.py  models.py  programs.py  signatures.py  test_signatures.py
dspy_researcher/evaluation/: __init__.py  evaluators.py  f1.py  utils.py
dspy_researcher/loaders/: custom_short_answers.py  data_splitter.py  qa_label_examples.py
scripts/: run_tgi.ps1  run_tgi.sh
