[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=68.0",
  "setuptools-scm",
  "pytest",
]

[project]
description = "dspy_researcher"
name = "dspy_researcher"
version = "0.1"
dynamic = ["dependencies", "optional-dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
# optional-dependencies.test = { file = ["requirements/requirements-test.in"] }
# optional-dependencies.server = { file = ["requirements/requirements-server.in"] }
# optional-dependencies.ui = { file = ["requirements/requirements-ui.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"]}

[tool.pytest.ini_options]
pythonpath = [
  "dspy_researcher",
]

[tool.setuptools.packages.find]
include = ["dspy_researcher"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)